force-app/main/default/objects/Invoice_Item__c/Invoice_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>INVI-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>