force-app/main/default/objects/Invoice_Item__c/fields/Instruction__c.field-meta.xml
<CustomField>
    <fullName>Instruction__c</fullName>
    <label>Instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Renewal_Instruction</valueSetName>
    </valueSet>
</CustomField>